<resources>
    <string name="app_name">Farras Haidar Raihantsa Covid_19</string>
    <string name="confirmed">Confirmed</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="countries">Countries</string>
    <string name="total_cases">Total cases</string>
    <string name="nama_negara">Country Name</string>
    <string name="currently">Currently</string>
    <string name="total_confirmed">Total Confirmed</string>
    <string name="new_confirmed">New Confirmed</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="total_recoverd">Total Recoverd</string>
    <string name="new_deaths">New Deaths</string>
    <string name="new_recovered">New Recoverd</string>
</resources>
