<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.chart.ChartCountryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp16"
        android:layout_weight="1"
        android:background="@drawable/bg_header_gray"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeight">

            <ImageView
                android:id="@+id/img_flag_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher_background"
                tools:ignore="NestedWeight" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_country_chart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/countries"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_curent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/currently"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeight">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp4">

                <LinearLayout
                    style="@style/LinearLayoutForCardView"
                    android:background="@color/orange">

                    <TextView
                        style="@style/TitleInsideCardViewInChart"
                        android:text="@string/total_confirmed"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/tv_total_confirmed_current"
                        style="@style/ContentTextInsideCardViewChart"
                        android:text="@string/currently"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp4">

                <LinearLayout
                    style="@style/LinearLayoutForCardView"
                    android:background="@color/orange_grey">

                    <TextView
                        style="@style/TitleInsideCardViewInChart"
                        android:text="@string/new_confirmed"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/tv_new_confirmed_current"
                        style="@style/ContentTextInsideCardViewChart"
                        android:text="@string/currently"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeight">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp4">

                <LinearLayout
                    style="@style/LinearLayoutForCardView"
                    android:background="@color/yellow">

                    <TextView
                        style="@style/TitleInsideCardViewInChart"
                        android:text="@string/total_deaths"
                        android:textColor="@android:color/holo_red_light" />

                    <TextView
                        android:id="@+id/tv_total_deaths_current"
                        style="@style/ContentTextInsideCardViewChart"
                        android:text="@string/currently"
                        android:textColor="@android:color/holo_red_light" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp4">

                <LinearLayout
                    style="@style/LinearLayoutForCardView"
                    android:background="@color/yellow_grey">

                    <TextView
                        style="@style/TitleInsideCardViewInChart"
                        android:text="@string/new_deaths"
                        android:textColor="@android:color/holo_red_light" />

                    <TextView
                        android:id="@+id/tv_new_deaths_current"
                        style="@style/ContentTextInsideCardViewChart"
                        android:text="@string/currently"
                        android:textColor="@android:color/holo_red_light" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeight">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp4">

                <LinearLayout
                    style="@style/LinearLayoutForCardView"
                    android:background="@color/colorAccent">

                    <TextView
                        style="@style/TitleInsideCardViewInChart"
                        android:text="@string/total_recoverd"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/tv_total_recovered_current"
                        style="@style/ContentTextInsideCardViewChart"
                        android:text="@string/currently"
                        android:textColor="@android:color/holo_red_light" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp4">

                <LinearLayout
                    style="@style/LinearLayoutForCardView"
                    android:background="@color/blue_grey">

                    <TextView
                        style="@style/TitleInsideCardViewInChart"
                        android:text="@string/new_recovered"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tv_new_recovered_current"
                        style="@style/ContentTextInsideCardViewChart"
                        android:text="@string/currently"
                        android:textColor="@android:color/holo_red_light" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp4"
        android:orientation="horizontal"
        android:layout_weight="1">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>