<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">
    
    //paras ganteng

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginEnd="@dimen/dp8"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/app_name" />

    <LinearLayout
        android:id="@+id/lay_linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginEnd="@dimen/dp8">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_weight="1"
            android:background="@drawable/box_search_country"
            app:queryHint="Cari Negara"
            android:textCursorDrawable="@null"
            app:iconifiedByDefault="false"
            app:queryBackground="@null"
            app:actionViewClass="android.widget.SearchView"/>

        <Button
            android:id="@+id/btn_sequence"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp2"
            android:layout_marginStart="@dimen/dp2"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginBottom="@dimen/dp8"
            android:background="@drawable/ic_sequence"
            android:layout_weight="5"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_globe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_linear1"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginEnd="@dimen/dp8"
        android:background="@drawable/bg_blue"
        android:orientation="horizontal"
        android:baselineAligned="false">

    <!-- Region text confirmed-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp8"
            android:layout_marginEnd="@dimen/dp8"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/dp8"
                android:text="@string/confirmed"/>

            <TextView
                android:id="@+id/tv_confirmed_globe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/dp8"
                android:text="-"/>

        </LinearLayout>
    <!-- Endregion-->

    <!-- Region text recovered-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp8"
            android:layout_marginEnd="@dimen/dp8"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/dp8"
                android:text="@string/recovered"/>

            <TextView
                android:id="@+id/tv_recovered_globe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/dp8"
                android:text="-"/>

        </LinearLayout>
    <!-- Endregion-->

    <!-- Region text deaths-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:text="@string/deaths"/>

            <TextView
                android:id="@+id/tv_deaths_globe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/dp8"
                android:text="-"/>


        </LinearLayout>
    <!-- Endregion-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_globe"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:orientation="horizontal">

        <TextView
            style="@style/TextContentMainActivity"
            android:layout_marginTop="@dimen/dp8"
            android:layout_weight="4"
            android:text="@string/countries"/>

        <TextView
            style="@style/TextContentMainActivity"
            android:layout_marginTop="@dimen/dp8"
            android:layout_weight="5"
            android:text="@string/total_cases"/>

        <TextView
            style="@style/TextContentMainActivity"
            android:layout_marginTop="@dimen/dp8"
            android:layout_weight="5"
            android:text="@string/recovered"/>

        <TextView
            style="@style/TextContentMainActivity"
            android:layout_marginTop="@dimen/dp8"
            android:layout_weight="5"
            android:text="@string/deaths"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_Bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_header"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginBottom="@dimen/dp8">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/list_country"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>
